# orcha-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  orcha.json  pyproject.toml
docs/: architecture.md  backlog.md  mvp.md
docs-site/: architecture.html  backlog.html  index.html  mvp.html
orcha/: __init__.py  cli.py  errors.py
orcha/client/: __init__.py
orcha/config/: __init__.py  config.py  config_schema.json  load_config.py
orcha/display/: __init__.py
orcha/llm/: __init__.py
tests/: conftest.py  test_config.py  test_load_config.py
